--- a/JP/history.html
+++ b/JP/history.html
@@ -75,6 +75,11 @@
               <h3>History</h3>
             </article>
             <div id="info">
+              <p>v1.1.0</p><br><br>
+              <p1>履歴においてあるメモを消すことができるようになりました。</p1><br>
+              <p>v1.0.1</p><br><br>
+              <p1>twitterの認証のバグをなくしました。</p1><br>
+              <p1>設定に通知センターにメモを残すかのスイッチを付けました。</p1><br><br>
               <p>v1.0.0</p><br><br>
               <p1>自動で通知センターに登録するようにしました。</p1><br>
               <p1>saveボタンをなくしてカラーラベルの実装をしました。</p1>
