--- a/JP/index.html
+++ b/JP/index.html
@@ -71,27 +71,16 @@
     <div class="bg-content">
       <div id="content"><div class="ic"></div>
         <div class="container">
-            <article class="span12">
-              <h3>Home</h3>
-              <h3 style="color:red">ただいま申請中</h3>
-            </article>
           <div class="clear"></div>
           <div id="getItem" style="width:1000px">
             <div class="store">
-              <p>Free version</p>
-              <a href="#"><img src="img/app-store.png" alt=""></a>
-            </div>
-            <div class="store">
               <p>Paid version</p>
-              <a href="#"><img src="img/app-store.png" alt=""></a>
+              <a href="https://itunes.apple.com/us/app/labelial/id722047338?l=ja&ls=1&mt=8"><img src="img/app-store.png" alt=""></a>
             </div>
             <div class="store">
               <p>coming soon(?)</p>
               <a href="#"><img src="img/googlePlay.png" alt=""></a>
             </div>
-          </div>
-          <div class="free-m">
-            <p>※ 無料版は通知センターに2つまでしかメモを置けません。 有料版は$0.99(US),¥85(JP)です。</p>
           </div>
               <ul class="thumbnails thumbnails-1 list-services" style="clear:both;padding-top: 10px">
                 <li class="span4">
