--- a/JP/info.html
+++ b/JP/info.html
@@ -75,6 +75,10 @@
               <h3>Info</h3>
             </article>
             <div id="info">
+              <p>2014/02/18</p>
+              <p1>v1.1.0に更新</p1><br>
+              <p>2013/11/04</p>
+              <p1>v1.0.1に更新</p1><br>
               <p>2013/10/12</p>
               <p1>無料版,有料版をappleに提出したので審査待ち</p1><br>
               <p>2013/10/09</p>
