--- a/history.html
+++ b/history.html
@@ -76,6 +76,10 @@
               <h3>History</h3>
             </article>
             <div id="info">
+              <p>v1.1.0</p>
+              <p1>can delete history memo</p1>
+            </div>
+            <div id="info">
               <!-- <img  src="img/page-1.png" alt="" class="normalImage"> -->
               <p>v1.0.0</p>
               <p1>??</p1>
