--- a/index.html
+++ b/index.html
@@ -93,23 +93,17 @@
             <div id="content">
                 <div class="ic"></div>
                 <div class="container">
-                    <article class="span12">
-                        <h3>Home</h3>
-                        <h3 style="color:red">In examination process</h3>
-                    </article>
+                    <!-- <article class="span12"> -->
+                    <!--     <h3>Home</h3> -->
+                    <!--     <h3 style="color:red">Please enter "openNC" if you want to leave a note in the notification center.</h3> -->
+                    <!-- </article> -->
                     <div class="clear"></div>
                     <div id="getItem" style="width:1000px">
                         <div class="store">
                             <p>
-                                Free version
-                            </p>
-                            <a href="#"><img src="img/app-store.png" alt=""></a>
-                        </div>
-                        <div class="store">
-                            <p>
                                 Paid version
                             </p>
-                            <a href="#"><img src="img/app-store.png" alt=""></a>
+                            <a href="https://itunes.apple.com/us/app/labelial/id722047338?l=ja&ls=1&mt=8"><img src="img/app-store.png" alt=""></a>
                         </div>
                         <div class="store">
                             <p>
@@ -117,11 +111,6 @@
                             </p>
                             <a href="#"><img src="img/googlePlay.png" alt=""></a>
                         </div>
-                    </div>
-                    <div class="free-m">
-                        <p>
-                            ※ The free version only provides two memos. For an unlimited number of memos, you can get the full version for only $0.99(US),¥85(JP).
-                        </p>
                     </div>
                     <ul class="thumbnails thumbnails-1 list-services" style="clear:both;padding-top: 10px">
                         <li class="span4">
