--- a/info.html
+++ b/info.html
@@ -76,6 +76,8 @@
               <h3>Info</h3>
             </article>
             <div id="info">
+              <p>2014/02/18</p>
+              <p1>updating a software version 1.1.0</p1>
               <p>2013/10/12</p>
               <p1>Labelial was submitted to apple. The examination is in process.</p1><br>
               <p>2013/10/09</p>
